# Sports-Trivia

./: README.md
client/: package-lock.json
client/src/: axios-api.js
client/src/components/: HelloWorld.vue
clientside/: README.md  babel.config.js  cypress.config.ts  package-lock.json  package.json  quasar.config.js  tsconfig.json
clientside/cypress/: cypress.config.js
clientside/cypress/e2e/: modal.cy.ts  routes.cy.ts
clientside/src/: App.vue  table-config.js  types.ts
clientside/src/boot/: axios.ts
clientside/src/components/: AddQuestionModal.vue  BrowseQuestions.vue  ErrorModal.vue  EssentialLink.vue  FilterSortQuestions.vue  LoginRegisterForm.vue  NavBar.vue  SetCard.vue
clientside/src/css/: app.scss
clientside/src/pages/: BrowseQuestions.vue  HomePage.vue  SetTriviaPage.vue  ViewSetPage.vue
clientside/src/router/: routes.ts
clientside/src/stores/: error-store.ts  set-store.ts  user-store.ts
server/: Dockerfile  aggregation_routes.py  app.py  id_model.py  models.py  pyproject.toml  requirements.txt
server/Controllers/: QuestionController.py  SetController.py  UserController.py
server/GraphQL/: QuestionTR.py  SetTR.py  UserTR.py
server/Models/: QuestionModel.py  SetModel.py  UserModel.py
server/aggregation/: helpers.py  routes.py
server/auth/: token.py
server/collections_db/: question.py  sets.py  users.py
server/databases/: question.py  set.py  user.py
server/db_routes/: question.py  sets.py  users.py
