[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ayon Paul < ayon.paul@stonybrook.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.73.0"
uvicorn = "0.17.4"
motor = "2.5.1"
python-jose = "3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
